2000-02-21   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* semi-setup.el (mime-setup-enable-inline-image): Remove checking
	of bitmap-mule; use `eval-after-load' instead of
	`call-after-loaded' to require `mime-image'.

	* mime-image.el (mime-display-image): Set default umask to 077.
	(mime-image-create): Use `nothing-image-instance-p'.

	* mime-pgp.el: When it is compiled, define `smime-output-buffer'
	and `smime-errors-buffer' to avoid compiler warning.

	* mime-edit.el: Ditto.

	* mime-pgp.el
	(mime-view-application/pkcs7-mime): Regard smime-type as
	"enveloped-data" unless it is specified.

	* smime.el (smime-directory-files): Abolish.
	(smime-verify-region): Abolish local variable `args'.

2000-02-20   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* mime-image.el: Remove X-Face setting; require cl when compiling.
	(mime-image-format-alist): Remove image/x-mag and image/x-pic.
	(mime-image-type-available-p): New function.
	(mime-image-create): New function.
	(mime-image-insert): New function.
	(mime-display-image): Rewrite.

	* mime-edit.el
	(mime-edit-define-charset): Handle 'mime-charset-comment.

2000-02-07  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-pgp.el: Fix doc string.
	* pgg-def.el: Ditto.
	* pgg-gpg.el: Ditto.
	* pgg-parse.el: Ditto.
	* pgg-pgp.el: Ditto.
	* pgg-pgp5.el: Ditto.
	* pgg.el: Ditto.

2000-02-02  Nakagawa, Makoto  <Makoto.Nakagawa@jp.compaq.com>

	* pgg-pgp5.el (pgg-scheme-verify-region): Copy the contents of
	`pgg-errors-buffer' to `pgg-output-buffer'.

2000-02-02   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* pgg.el (pgg-temp-buffer-show-function): Don't check if the
	selected window is the only window.

2000-02-01   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>

	* semi-def.el (mime-user-interface-product): Bump up to
	EMIKO 1.13.11.

	* mime-image.el: Add checking for `x-face-mule'.

 	* pgg.el,pgp-gpg.el,pgg-pgp.el,pgg-pgp5.el
	(pgg-scheme-lookup-key): Rename from
	`pgg-scheme-lookup-key-string'.