@@ -1,5 +1,11 @@
 2000-02-21   Daiki Ueno  <ueno@ueda.info.waseda.ac.jp>
 
+	* pgg-gpg.el (pgg-gpg-process-region): Fix cleanup form.
+
+	* pgg-pgp.el (pgg-pgp-process-region): Ditto.
+
+	* pgg-pgp5.el (pgg-pgp5-process-region): Ditto.
+
 	* semi-setup.el (mime-setup-enable-inline-image): Remove checking
 	of bitmap-mule; use `eval-after-load' instead of
 	`call-after-loaded' to require `mime-image'.
